Edit the openURL

--- a/InstagramMagic/en.lproj/Localizable.strings
+++ b/InstagramMagic/en.lproj/Localizable.strings
@@ -21,5 +21,5 @@ CFBundleDisplayName = "Instagram magic hand";
 
 "aboutme.title" = "Forever free! Forever NO AD!";
 "aboutme.subtitle" = "Best works for the most beautiful you.";
-"aboutme.instagram" = "The APP has been open source, and follow the MIT open source agreement, if copyright infringement, please submit Issue in GitHub.";
+"aboutme.github" = "The APP has been open source, and follow the MIT open source agreement, if copyright infringement, please submit Issue in GitHub.";
 "aboutme.suggest" = "Write a Review";
