--- a/InstagramMagic/zh-Hant.lproj/Localizable.strings
+++ b/InstagramMagic/zh-Hant.lproj/Localizable.strings
@@ -21,5 +21,5 @@ CFBundleDisplayName = "Instagram魔術手";
 
 "aboutme.title" = "永久免費！永久無廣告！";
 "aboutme.subtitle" = "最好的作品，送給最美的你";
-"aboutme.instagram" = "本APP已開源,並遵循MIT開源協議,如有版權侵犯,請在GitHub中Issue";
+"aboutme.github" = "本APP已開源,並遵循MIT開源協議,如有版權侵犯,請在GitHub中Issue";
 "aboutme.suggest" = "評價或建議";
